--- a/index.html
+++ b/index.html
@@ -96,9 +96,8 @@
         <span class="arrow">▶</span>Impaired Left Ventricular Systolic or Diastolic Function</div>  
         <div class="content h1-content">
             <p>
-                For full up-to-date guidance, please see the BNSSG Heart Failure page, available at:
-            <br>
-                https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/
+                For full up-to-date guidance, please see the BNSSG Heart Failure page:
+                <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/">Click Here</a>
             </p>
 
             <div class="heading h2" onclick="toggle(this)">
@@ -198,9 +197,8 @@
                     <br>Refer to the appropriate heart failure service.</span>
                 <br><br>
                     <span style="color:grey">
-                    BNSSG Heart Failure Guidance (scroll down to “Patients with known heart failure” section)
-                <br>
-                    https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/
+                    BNSSG Heart Failure Guidance (scroll down to “Patients with known heart failure” section): 
+                        <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/">Click Here</a>
                     </span>
                 </p>
             </div>
@@ -231,9 +229,8 @@
         <span class="arrow">▶</span>Probability of Pulmonary Hypertension</div>
         <div class="content h1-content">
             <p>
-                For full up-to-date guidance, please see the BNSSG Pulmonary Hypertension page, available at:
-            <br>
-                https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/
+                For full up-to-date guidance, please see the BNSSG Pulmonary Hypertension page:
+                <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/">Click Here</a>
             <br><br>
                 In the most basic terms, elevated pulmonary artery pressures come about as a result of: 
             <br>
@@ -273,8 +270,7 @@
                     <span style="color:orange">- Further investigation +/- referral to appropriate clinical specialty</span>
                 <br><br>
                     <span style="color:grey">Please refer to BNSSG Pulmonary Hypertension page: 
-                <br>
-                    https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/
+                    <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/">Click Here</a>
                     </span>
                 </p>
             </div>
@@ -298,9 +294,8 @@
                 <br>
                     <span style="color:orange">- Further investigation +/- referral to appropriate clinical specialty</span>
                 <br><br>
-                    <span style="color:grey">Please refer to BNSSG Pulmonary Hypertension page: 
-                <br>
-                    https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/
+                    <span style="color:grey">Please refer to BNSSG Pulmonary Hypertension page:
+                    <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/">Click Here</a>
                     </span>
                 </p>
             </div>
@@ -311,12 +306,12 @@
         <div class="content h1-content">
             <p>
                 For full up-to-date guidance, please see the following two resources:
-            <br>
-                <br>BNSSG Aortopathy page, available at:
-                <br>https://remedy.bnssg.icb.nhs.uk/adults/cardiology/thoracic-aorta-disease/
-            <br>
-                <br>Clinical Guideline for the Management of Chronic Thoracic Aortic Disease, available at:
-                <br>https://remedy.bnssg.icb.nhs.uk/media/giwl5joi/cg-for-management-of-aortic-disease-final-nov-2024.docx
+            <br><br>
+                BNSSG Aortopathy page:
+                <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/thoracic-aorta-disease/">Click Here</a>
+            <br><br>
+                Clinical Guideline for the Management of Chronic Thoracic Aortic Disease:
+                <a href="https://remedy.bnssg.icb.nhs.uk/media/giwl5joi/cg-for-management-of-aortic-disease-final-nov-2024.docx">Click Here</a>
             </p>
             
             <div class="heading h2" onclick="toggle(this)">
