--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="content h1-content">
             <p>
                 For full up-to-date guidance, please see the BNSSG Heart Failure page:
-                <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/">Click Here</a>
+                <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/" target="_blank">Click Here</a>
             </p>
 
             <div class="heading h2" onclick="toggle(this)">
@@ -198,7 +198,7 @@
                 <br><br>
                     <span style="color:grey">
                     BNSSG Heart Failure Guidance (scroll down to “Patients with known heart failure” section): 
-                        <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/">Click Here</a>
+                        <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/" target="_blank">Click Here</a>
                     </span>
                 </p>
             </div>
@@ -230,7 +230,7 @@
         <div class="content h1-content">
             <p>
                 For full up-to-date guidance, please see the BNSSG Pulmonary Hypertension page:
-                <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/">Click Here</a>
+                <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/" target="_blank">Click Here</a>
             <br><br>
                 In the most basic terms, elevated pulmonary artery pressures come about as a result of: 
             <br>
@@ -270,7 +270,7 @@
                     <span style="color:orange">- Further investigation +/- referral to appropriate clinical specialty</span>
                 <br><br>
                     <span style="color:grey">Please refer to BNSSG Pulmonary Hypertension page: 
-                    <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/">Click Here</a>
+                    <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/" target="_blank">Click Here</a>
                     </span>
                 </p>
             </div>
@@ -295,7 +295,7 @@
                     <span style="color:orange">- Further investigation +/- referral to appropriate clinical specialty</span>
                 <br><br>
                     <span style="color:grey">Please refer to BNSSG Pulmonary Hypertension page:
-                    <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/">Click Here</a>
+                    <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/" target="_blank">Click Here</a>
                     </span>
                 </p>
             </div>
@@ -308,10 +308,10 @@
                 For full up-to-date guidance, please see the following two resources:
             <br><br>
                 BNSSG Aortopathy page:
-                <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/thoracic-aorta-disease/">Click Here</a>
+                <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/thoracic-aorta-disease/" target="_blank">Click Here</a>
             <br><br>
                 Clinical Guideline for the Management of Chronic Thoracic Aortic Disease:
-                <a href="https://remedy.bnssg.icb.nhs.uk/media/giwl5joi/cg-for-management-of-aortic-disease-final-nov-2024.docx">Click Here</a>
+                <a href="https://remedy.bnssg.icb.nhs.uk/media/giwl5joi/cg-for-management-of-aortic-disease-final-nov-2024.docx" target="_blank">Click Here</a>
             </p>
             
             <div class="heading h2" onclick="toggle(this)">
