--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
                 </div>
                     <div class="content h3-content">
                         <p>
-                            This suggests a diagnosis of Heart Failure with Reduced Ejection Fraction.
+                            This suggests a diagnosis of <b>Heart Failure with Reduced Ejection Fraction</b>.
                             <span style="color:grey">
                                 <i>
-                                <br>(specifically, HFrEF where EF less than 40%, HFmrEF where EF 41-49%)
+                                <br>(HFrEF where EF less than 40%, HFmrEF where EF 41-49%)
                                 </i>
                             </span>
                             <br><br>
@@ -150,7 +150,7 @@
                 </div>
                     <div class="content h3-content">
                         <p>
-                            This suggests a diagnosis of Heart Failure with Preserved Ejection Fraction.
+                            This suggests a diagnosis of <b>Heart Failure with Preserved Ejection Fraction</b>.
                             <br><br>
                             <span class="block">
                                 <b>In all cases:</b>
@@ -177,7 +177,7 @@
                 </div>
                     <div class="content h3-content">
                         <p>
-                            This suggests a diagnosis of Heart Failure with Preserved Ejection Fraction.
+                            This suggests a diagnosis of <b>Heart Failure with Preserved Ejection Fraction</b>.
                             <br><br>
                             <span class="block">
                                 <b>In all cases:</b>
@@ -275,14 +275,14 @@
             <p>
                 For full up-to-date guidance, please see the BNSSG Pulmonary Hypertension page:
                 <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/" target="_blank">Click Here</a>
-            <br><br>
-                In the most basic terms, elevated pulmonary artery pressures come about as a result of: 
-            <br>
-                •	Restriction of blood flow within the lungs (varied pathologies), or
-            <br>
-                •	Restriction of blood flow out of the lungs (left-sided heart disease)
-            <br><br>
-                Estimates of the probability of pulmonary hypertension by transthoracic echo correlate poorly to gold standard measures of pulmonary pressures, so should always be considered alongside the clinical picture. 
+                <br><br>
+                <span class="block">
+                    In the most basic terms, elevated pulmonary artery pressures come about as a result of: 
+                    <br>•	Restriction of blood flow within the lungs (varied pathologies), or
+                    <br>•	Restriction of blood flow out of the lungs (left-sided heart disease)
+                    <br><br>
+                    Estimates of the probability of pulmonary hypertension by transthoracic echo correlate poorly to gold standard measures of pulmonary pressures, so should always be considered alongside the clinical picture. 
+                </span>
             </p>
 
             <div class="heading h2" onclick="toggle(this)">
