--- a/index.html
+++ b/index.html
@@ -137,9 +137,13 @@
                                 </span>
                                 <br><br>
                                 <span style="color:grey">
-                                    BNSSG Heart Failure Guidance: 
+                                    BNSSG Heart Failure page: 
                                     <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/" target="_blank">Click Here</a>
                                     <br>(scroll down to advice based on NT-proBNP level)
+                                    <br><br>
+                                    BNSSG Primary Care Heart Failure Treatment Guideline:
+                                    <a href="https://remedy.bnssg.icb.nhs.uk/media/t1kpgp4m/bnssg-hfguideline-2024.pdf" target="_blank">Click Here</a>
+                                    <br>(Page 2: "Treatment Algorithm for LV Systolic Dysfunction")
                                 </span>
                             </span>
                         </p>
@@ -167,6 +171,10 @@
                                     BNSSG Heart Failure Guidance: 
                                     <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/" target="_blank">Click Here</a>
                                     <br>(scroll down to advice based on NT-proBNP level)
+                                    <br><br>
+                                    BNSSG Primary Care Heart Failure Treatment Guideline:
+                                    <a href="https://remedy.bnssg.icb.nhs.uk/media/t1kpgp4m/bnssg-hfguideline-2024.pdf" target="_blank">Click Here</a>
+                                    <br>(Page 3: "Treatment Algorithm for Preserved Ejection Fraction")
                                 </span>
                             </span>
                         </p>
@@ -193,7 +201,11 @@
                                 <span style="color:grey">
                                     BNSSG Heart Failure Guidance: 
                                     <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/" target="_blank">Click Here</a>
-                                    <br>(scroll down to advice based on NT-proBNP level)
+                                    <br>(scroll down to advice based on NT-proBNP level
+                                    <br><br>
+                                    BNSSG Primary Care Heart Failure Treatment Guideline:
+                                    <a href="https://remedy.bnssg.icb.nhs.uk/media/t1kpgp4m/bnssg-hfguideline-2024.pdf" target="_blank">Click Here</a>
+                                    <br>(Page 3: "Treatment Algorithm for Preserved Ejection Fraction")
                                 </span>
                             </span>
                         </p>
@@ -217,7 +229,7 @@
                 <br><br>   
                     Further routine imaging is not recommended. 
                 <br><br>
-                    There may be cases where an echo has been performed for other reasons, and there is a change in EF:
+                    There may be instances where an echo has been performed for other reasons and there is a change in reported EF. In which case:
                 <br><br>
                     <span class="block">
                     <b>No significant change in clinical status:</b> 
