--- a/index.html
+++ b/index.html
@@ -102,8 +102,13 @@
         <span class="arrow">▶</span>Impaired Left Ventricular Systolic or Diastolic Function</div>  
         <div class="content h1-content">
             <p>
-                For full up-to-date guidance, please see the BNSSG Heart Failure page:
-                <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/" target="_blank">Click Here</a>
+                For full up-to-date guidance, please see the following two resources:
+                <br><br>
+                Remedy - Heart Failure page:
+                <br><a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/" target="_blank">Click Here</a>
+                <br><br>
+                BNSSG Primary Care Heart Failure Treatment Guideline:
+                <br><a href="https://remedy.bnssg.icb.nhs.uk/media/t1kpgp4m/bnssg-hfguideline-2024.pdf" target="_blank">Click Here</a>
             </p>
 
             <div class="heading h2" onclick="toggle(this)">
@@ -138,7 +143,7 @@
                                 </span>
                                 <br><br>
                                 <span style="color:grey">
-                                    BNSSG Heart Failure page: 
+                                    Remedy - Heart Failure page: 
                                     <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/" target="_blank">Click Here</a>
                                     <br>(scroll down to advice based on NT-proBNP level)
                                     <br><br>
@@ -169,12 +174,12 @@
                                 </span>
                                 <br><br>
                                 <span style="color:grey">
-                                    BNSSG Heart Failure Guidance: 
-                                    <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/" target="_blank">Click Here</a>
+                                    Remedy - Heart Failure page: 
+                                    <a href="https://remedy..icb.nhs.uk/adults/cardiology/heart-failure/" target="_blank">Click Here</a>
                                     <br>(scroll down to advice based on NT-proBNP level)
                                     <br><br>
-                                    BNSSG Primary Care Heart Failure Treatment Guideline:
-                                    <a href="https://remedy.bnssg.icb.nhs.uk/media/t1kpgp4m/bnssg-hfguideline-2024.pdf" target="_blank">Click Here</a>
+                                     Primary Care Heart Failure Treatment Guideline:
+                                    <a href="https://remedy..icb.nhs.uk/media/t1kpgp4m/-hfguideline-2024.pdf" target="_blank">Click Here</a>
                                     <br>(Page 3: "Treatment Algorithm for Preserved Ejection Fraction")
                                 </span>
                             </span>
@@ -200,7 +205,7 @@
                                 </span>
                                 <br><br>
                                 <span style="color:grey">
-                                    BNSSG Heart Failure Guidance: 
+                                    Remedy - Heart Failure page: 
                                     <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/" target="_blank">Click Here</a>
                                     <br>(scroll down to advice based on NT-proBNP level
                                     <br><br>
@@ -246,7 +251,7 @@
                         </span>
                         <br><br>
                         <span style="color:grey">
-                            BNSSG Heart Failure Guidance: 
+                            Remedy - Heart Failure page: 
                             <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/" target="_blank">Click Here</a>
                             <br>(scroll down to “Patients with known heart failure”)
                         </span>
@@ -286,7 +291,7 @@
         <span class="arrow">▶</span>Probability of Pulmonary Hypertension</div>
         <div class="content h1-content">
             <p>
-                For full up-to-date guidance, please see the BNSSG Pulmonary Hypertension page:
+                For full up-to-date guidance, please see the Remedy - Pulmonary Hypertension page:
                 <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/" target="_blank">Click Here</a>
                 <br><br>
                 <span class="block">
@@ -307,7 +312,7 @@
                     <span class="block">
                         In all cases:
                         <span style="color:grey">
-                            <br>No direct action required.
+                            <br>No action required.
                         </span>
                     </span>
                 </p>
@@ -321,14 +326,14 @@
                     <span class="block">
                         <b>Known left-sided heart pathology:</b>
                         <span style="color:grey">
-                            <br>No direct action (optimal treatment of heart disease)
+                            <br>Optimal treatment of heart disease.
                         </span>
                     </span>
                         <br><br>
                     <span class="block">    
                         <b>Known pulmonary pathology:</b>
                         <span style="color:grey">
-                            <br>No direct action (optimal treatment of pulmonary disease)
+                            <br>Optimal treatment of pulmonary disease.
                         </span>
                     </span>
                     <br><br>
@@ -338,7 +343,7 @@
                         <span style="color:orange">Further investigation +/- referral to appropriate clinical specialty
                         </span>
                         <br><br>
-                        <span style="color:grey">Please refer to BNSSG Pulmonary Hypertension page: 
+                        <span style="color:grey">Please refer to Remedy - Pulmonary Hypertension page: 
                         <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/" target="_blank">Click Here</a>
                         </span>
                     </span>
@@ -353,14 +358,14 @@
                     <span class="block">
                         <b>Known left-sided heart pathology:</b>
                         <span style="color:grey">
-                            <br>No direct action (optimal treatment of heart disease)
+                            <br>Optimal treatment of heart disease.
                         </span>
                     </span>
                         <br><br>
                     <span class="block">    
                         <b>Known pulmonary pathology:</b>
                         <span style="color:grey">
-                            <br>No direct action (optimal treatment of pulmonary disease)
+                            <br>Optimal treatment of pulmonary disease.
                         </span>
                     </span>
                     <br><br>
@@ -370,7 +375,7 @@
                         <span style="color:orange">Further investigation +/- referral to appropriate clinical specialty
                         </span>
                         <br><br>
-                        <span style="color:grey">Please refer to BNSSG Pulmonary Hypertension page: 
+                        <span style="color:grey">Please refer to Remedy - Pulmonary Hypertension page: 
                         <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/pulmonary-hypertension/" target="_blank">Click Here</a>
                         </span>
                     </span>
@@ -384,10 +389,10 @@
             <p>
                 For full up-to-date guidance, please see the following two resources:
             <br><br>
-                BNSSG Aortopathy page:
+                Remedy - Aortopathy page:
                 <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/thoracic-aorta-disease/" target="_blank">Click Here</a>
             <br><br>
-                Clinical Guideline for the Management of Chronic Thoracic Aortic Disease:
+                BNSSG Guideline for the Management of Chronic Thoracic Aortic Disease:
                 <a href="https://remedy.bnssg.icb.nhs.uk/media/giwl5joi/cg-for-management-of-aortic-disease-final-nov-2024.docx" target="_blank">Click Here</a>
             </p>
             
