--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                 For full up-to-date guidance, please see the following two resources:
                 <br><br>
                 Remedy - Heart Failure page:
-                <br><a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/" target="_blank">Click Here</a>
+                <a href="https://remedy.bnssg.icb.nhs.uk/adults/cardiology/heart-failure/" target="_blank">Click Here</a>
                 <br><br>
                 BNSSG Primary Care Heart Failure Treatment Guideline:
-                <br><a href="https://remedy.bnssg.icb.nhs.uk/media/t1kpgp4m/bnssg-hfguideline-2024.pdf" target="_blank">Click Here</a>
+                <a href="https://remedy.bnssg.icb.nhs.uk/media/t1kpgp4m/bnssg-hfguideline-2024.pdf" target="_blank">Click Here</a>
             </p>
 
             <div class="heading h2" onclick="toggle(this)">
