--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             </div>
 
         <div class="heading h2" onclick="toggle(this)">
-            <span class="arrow">▶</span>Medium Probability of Pulmonary Hypertension
+            <span class="arrow">▶</span>Intermediate Probability of Pulmonary Hypertension
         </div>
             <div class="content h2-content">
                 <p> 
