--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         }
         
         .block {
-            padding:8px; 
+            padding:6px; 
             display:block; 
-            background-color:#EEE;
+            background-color:#F0F0F0;
         }
     </style>
 </head>
