--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             
             <div class="content h2-content">
                 <p>
-                    For patients with clinical signs of heart failure and elevated NT-proBNP (>400pg/ml).
+                    For patients with clinical signs of heart failure and elevated NT-proBNP (greater than 400pg/ml).
                 </p>
 
                 <div class="heading h3" onclick="toggle(this)">
