--- a/index.html
+++ b/index.html
@@ -117,18 +117,18 @@
             
             <div class="content h2-content">
                 <p>
-                    For patients with clinical signs of heart failure and elevated NT-proBNP (greater than 400pg/ml).
+                    For patients with clinical signs of heart failure and elevated NT-proBNP (&gt;400pg/ml).
                 </p>
 
                 <div class="heading h3" onclick="toggle(this)">
-                    <span class="arrow">▶</span>"...impaired left ventricular systolic function" (EF less than 50%)
+                    <span class="arrow">▶</span>"...impaired left ventricular systolic function" (EF &lt;50%)
                 </div>
                     <div class="content h3-content">
                         <p>
                             This suggests a diagnosis of <b>Heart Failure with Reduced Ejection Fraction</b>.
                             <span style="color:grey">
                                 <i>
-                                <br>(HFrEF where EF less than 40%, HFmrEF where EF 41-49%)
+                                <br>(HFrEF where EF &lt;40%, HFmrEF where EF 41-49%)
                                 </i>
                             </span>
                             <br><br>
@@ -156,7 +156,7 @@
                     </div>
 
                 <div class="heading h3" onclick="toggle(this)">
-                    <span class="arrow">▶</span>"...impaired left ventricular systolic function" (EF more than 50%)
+                    <span class="arrow">▶</span>"...impaired left ventricular systolic function" (EF &gt;50%)
                 </div>
                     <div class="content h3-content">
                         <p>
@@ -187,7 +187,7 @@
                     </div>
 
                 <div class="heading h3" onclick="toggle(this)">
-                    <span class="arrow">▶</span>"Impaired diastolic function" (EF more than 55%)
+                    <span class="arrow">▶</span>"Impaired diastolic function" (EF &gt;55%)
                 </div>
                     <div class="content h3-content">
                         <p>
@@ -405,12 +405,12 @@
                 </p>
 
                 <div class="heading h3" onclick="toggle(this)">
-                    <span class="arrow">▶</span>Absolute diameter 40mm or less (root or proximal ascending aorta)
+                    <span class="arrow">▶</span>Absolute diameter &lt;40mm (root or proximal ascending aorta)
                 </div>
                     <div class="content h3-content">
                         <p>
                             <span class="block">
-                                <b>Age over 60: </b>
+                                <b>Age &gt;60: </b>
                                 <br>
                                 <span style="color:grey">
                                     No routine follow-up
@@ -418,7 +418,7 @@
                             </span>
                             <br>
                             <span class="block">
-                                <b>Age under 60 with no features of underlying disease (see below): </b>
+                                <b>Age &lt;60 with no features of underlying disease (see below): </b>
                                 <br>
                                 <span style="color:grey">
                                     No routine follow-up
@@ -426,7 +426,7 @@
                             </span>
                             <br>
                             <span class="block">
-                                <b>Age under 60 with strong suspicion of underlying disease (see below): </b>
+                                <b>Age &lt;60 with strong suspicion of underlying disease (see below): </b>
                                 <br>
                                 <span style="color:orange">
                                     Routine cardiology referral
@@ -437,7 +437,7 @@
                                 Features of underlying disease:
                                 <br>
                                 <span style="color:grey">
-                                    - 1st degree family history of dissection at young age (under 70 years without hypertension, or under 60 years with hypertension)
+                                    - 1st degree family history of dissection at young age (&lt;70 years without hypertension, or &lt;60 years with hypertension)
                                     <br>
                                     - Bicuspid aortic valve
                                     <br>
@@ -483,7 +483,7 @@
                     </div>
                 
                 <div class="heading h3" onclick="toggle(this)">
-                    <span class="arrow">▶</span>Absolute diameter 50mm or more (root or proximal ascending aorta)
+                    <span class="arrow">▶</span>Absolute diameter &gt;50mm (root or proximal ascending aorta)
                 </div>
                     <div class="content h3-content">
                         <p>
@@ -592,12 +592,12 @@
                             <span class="block">
                                 <b>Marfan Syndrome:</b>
                                 <br>
-                                Absolute diameter less than 45mm:
+                                Absolute diameter &lt;45mm:
                                 <span style="color:green">
                                     <br>Repeat CT/MRI every 2 years
                                 </span>
                                 <br><br>  
-                                Absolute diameter 45mm or more:
+                                Absolute diameter &gt;45mm:
                                 <span style="color:green">
                                     <br>Repeat CT/MRI every 1 year
                                 </span>  
@@ -629,7 +629,7 @@
                             <span class="block">
                                 <b>Turner Syndrome:</b>
                                 <br>
-                                Aorta Size Index (ASI) less than 20mm/m2:
+                                Aorta Size Index (ASI) &lt;20mm/m2:
                                 <span style="color:green">
                                     <br>- Repeat CT/MRI every 5 years
                                 </span>
@@ -639,7 +639,7 @@
                                     <br>Repeat CT/MRI every 2 years
                                 </span>
                                 <br><br>  
-                                Aorta Size Index (ASI) 23mm/m2 or more and/or additional risk factors:
+                                Aorta Size Index (ASI) &gt;23mm/m2 and/or additional risk factors:
                                 <span style="color:green">
                                     <br>Repeat CT/MRI every 1 year
                                 </span>
@@ -683,7 +683,7 @@
                                 <br>
                                 <span style="color:grey">
                                     <i>
-                                        Generally, no cardiology input required, unless associated aortopathy greater than 40mm (see section below)
+                                        Generally, no cardiology input required, unless associated aortopathy &gt;40mm (see section below)
                                     </i>
                                 </span>
                             </span>
@@ -716,7 +716,7 @@
                                     </span>    
                                     <br>
                                     <span style="color:grey">
-                                        - New left ventricular systolic function (EF less than 55%) with no other cause and/or reducing ejection fraction on subsequent scans
+                                        - New left ventricular systolic function (EF &lt;55%) with no other cause and/or reducing ejection fraction on subsequent scans
                                         <br>
                                         - Symptoms (syncope, chest pain, breathlessness, paroxysmal nocturnal dyspnoea, oedema)
                                     </span>
@@ -782,7 +782,7 @@
                                 </span>    
                                 <br>
                                 <span style="color:grey">
-                                    - Aortic root and/or proximal ascending aorta greater than 40mm (by absolute values)
+                                    - Aortic root and/or proximal ascending aorta &gt;40mm (by absolute values)
                                     <br>
                                     - Dilated LV and/or reducing ejection fraction on subsequent scans
                                     <br>
@@ -833,7 +833,7 @@
                                         </span>    
                                         <br>
                                         <span style="color:grey">
-                                            - Aortic root and/or proximal ascending aorta greater than 40mm (by absolute values)
+                                            - Aortic root and/or proximal ascending aorta &gt;40mm (by absolute values)
                                             <br>
                                             - Dilated LV and/or reducing ejection fraction on subsequent scans
                                             <br>
@@ -894,7 +894,7 @@
                                     </span>    
                                     <br>
                                     <span style="color:grey">
-                                        - Estimated pulmonary artery systolic pressure greater than 50mmHg and/or right ventricular impairment
+                                        - Estimated pulmonary artery systolic pressure &gt;50mmHg and/or right ventricular impairment
                                         <br>
                                         - New atrial fibrillation
                                         <br>
@@ -950,13 +950,13 @@
                                     </span>    
                                     <br>
                                     <span style="color:grey">
-                                        - Dilated LV and/or ejection fraction less than 60%
+                                        - Dilated LV and/or ejection fraction &lt;60%
                                         <br>
-                                        - Estimated pulmonary artery systolic pressure greater than 50mmHg and/or right ventricular impairment
+                                        - Estimated pulmonary artery systolic pressure &gt;50mmHg and/or right ventricular impairment
                                         <br>
                                         - New atrial fibrillation
                                         <br>
-                                        - Indexed LA volume greater than 60ml/m2 (by BSA)
+                                        - Indexed LA volume &gt;60ml/m2 (by BSA)
                                         <br>
                                         - Symptoms (syncope, chest pain, breathlessness, paroxysmal nocturnal dyspnoea, oedema)
                                     </span>
@@ -1038,7 +1038,7 @@
                                     </span>    
                                     <br>
                                     <span style="color:grey">
-                                        - Estimated pulmonary artery systolic pressure greater than 50mmHg and/or right ventricular impairment
+                                        - Estimated pulmonary artery systolic pressure &gt;50mmHg and/or right ventricular impairment
                                         <br>
                                         - Symptoms (syncope, chest pain, breathlessness, paroxysmal nocturnal dyspnoea, oedema)
                                     </span>
@@ -1080,7 +1080,7 @@
                                 </span>    
                                 <br>
                                 <span style="color:grey">
-                                    - Estimated pulmonary artery systolic pressure greater than 50mmHg and/or right ventricular impairment
+                                    - Estimated pulmonary artery systolic pressure &gt;50mmHg and/or right ventricular impairment
                                     <br>
                                     - Symptoms (syncope, chest pain, breathlessness, paroxysmal nocturnal dyspnoea, oedema)
                                 </span>
@@ -1107,7 +1107,7 @@
                                 </span>    
                                 <br>
                                 <span style="color:grey">
-                                    - Estimated pulmonary artery systolic pressure greater than 50mmHg and/or right ventricular impairment
+                                    - Estimated pulmonary artery systolic pressure &gt;50mmHg and/or right ventricular impairment
                                     <br>
                                     - Symptoms (syncope, chest pain, breathlessness, paroxysmal nocturnal dyspnoea, oedema)
                                 </span>
