--- a/index.html
+++ b/index.html
@@ -662,18 +662,31 @@
                 <p>
                 </p>
                 <div class="heading h3" onclick="toggle(this)">
-                    <span class="arrow">▶</span>Aortic Stenosis
+                    <span class="arrow">▶</span>Aortic Sclerosis / Sclerotic Aortic Valve
                 </div>
                     <div class="content h3-content">
                         <p>
                             <span class="block">
-                                <b>Sclerotic aortic valve only (no stenosis):</b>
+                                <b>In all cases:</b>
                                 <br>
                                 <span style="color:grey">
                                     No routine follow-up
                                 </span>
+                                <br>
+                                <span style="color:grey">
+                                    <i>
+                                        This describes an aortic valve with thickened leaflets, but without any significant restriction to blood flow.
+                                    </i>
+                                </span>
                             </span>
-                            <br>
+                        </p>
+                    </div>
+                
+                <div class="heading h3" onclick="toggle(this)">
+                    <span class="arrow">▶</span>Aortic Stenosis
+                </div>
+                    <div class="content h3-content">
+                        <p>
                             <span class="block">
                                 <b>Mild aortic stenosis (with trileaflet valve):</b>
                                 <br>
